Updated bio, image, button color, and added JavaScript alert

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://via.placeholder.com/150" alt="Student Photo">
+ HEAD
+                <img src="img/img.jpg" alt="my picture">
+
+                <img src="C:\Users\jblev\OneDrive\intro_final_f24" alt="img">
+
             </div>
             <div class="bio">
-                <h2>John Doe</h2>
-                <p>Hi, I'm John, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <h2>Janeth Blevins</h2>
+                <p>Hi, I'm Janeth Blevins, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
             </div>
         </div>
 
@@ -31,3 +35,6 @@
 
 </body>
 </html>
+<script>
+     alert("Hello world, I'm a Devoloper");
+</script>
