Updated bio, image, button color, and added JavaScript alert

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         
         <div class="bio-card">
             <div class="photo">
- HEAD
-                <img src="img/img.jpg" alt="my picture">
-
-                <img src="C:\Users\jblev\OneDrive\intro_final_f24" alt="img">
-
+ 
+                <img src="img/img.jpg.jpg" alt="my picture">
+                
             </div>
             <div class="bio">
                 <h2>Janeth Blevins</h2>
